--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 </button>
                 <nav class="nav">
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li style="--i: 1"><a href="#home">Home</a></li>
+                        <li style="--i: 2"><a href="#services">Services</a></li>
+                        <li style="--i: 3"><a href="#about">About</a></li>
+                        <li style="--i: 4"><a href="#testimonials">Testimonials</a></li>
+                        <li style="--i: 5"><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
